Sun Aug 12 10:45:16 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkcube.c, gtkmet.c, gtkrolls.c, gtksplash.c, gtktheory.c,
	gtktoolbar.c: update deprecated gtk_object_set_data

Sat Aug 11 21:30:46 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: update deprecated gtk_entry_new_with_max_length

Sat Aug 11 21:09:41 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkwindows.c, gtkgame.c: update deprecated gtk_window_set_policy and
	gtk_container_children

Sat Aug 11 20:58:02 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* play.c, gtkboard.c: update deprecated gtk_timeout*

Sat Aug 11 20:26:54 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* board3d/fun3d.h, board3d/misc3d.c: make export position png work
	when using board3d

Wed Aug  1 20:57:30 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: set default icon for all windows

Tue Jul 31 00:27:34 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* analysis.c, configure.in, multithread.c, multithread.h, rollout.c,
	speed.c: make windows threads compile again and make a few simplifying
	changes
	* M html.c: UserCommand not awailable without gtk

Sun Jul 29 08:27:41 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* file.c, file.h, gtkfile.c, import.c: allow manual setting of the import
	file format in the GUI

Sun Jul 29 08:24:22 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* html.c: export html-images dir if non-existing
	* gtkgame.c: always export images to html-images/

Sun Jul 29 00:42:50 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* multithread.c: another attempt to fix the check for all tasks done
	* rollout.c: fix mt rollout bug (wrong count)

Wed Jul 18 14:35:32 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkboard.c, gtkgame.c, gtkgame.h, gtkgamelist.c, gtkoptions.c,
	gtkpanels.c, gtkprefs.c, gtktoolbar.c, play.c, render.c, renderprefs.c,
	board3d/fun3d.h, board3d/graph.c, board3d/misc3d.c, board3d/widget3d.c:
	Allow startup in 2D mode if gtk_gl_init_check fails
